<resources>
    //Default language: PT-BR
    <string name="app_name">Matemática para Todos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="version">1.01</string>
    <string name="title_activity_help">Ajuda</string>
    <string name="action_settings">Opções</string>
    <string name="about">Sobre</string>
    //Actions
    <string name="goBack">Voltar</string>
    <string name="goForward">Avançar</string>
    <string name="help">Ajuda</string>

    //Categories
    <string name="home">Início</string>
    <string name="numbers">Números</string>
    <string name="numericOperations">Operações Numéricas</string>
    <string name="geometry">Espaço e Forma</string>
    <string name="scalesAndMeasures">Grandezas e Medidas</string>
    <string name="infoTreatment">Tratamento da Informação</string>
    <string name="quit">Sair</string>
    <string name="nightMode">Modo Noturno</string>
    <string name="liteMode">Desativar Animações</string>

    //Ratings
    <string name="congratulations">Parabéns! \n %1$d</string>
    <string name="good">Muito Bem! \n %1$d</string>
    <string name="youCanImprove">Você pode melhorar! \n %1$d</string>
    <string name="continueGame">Continuar</string>

    //Messages
    <string name="message_firstPage">Você está na página inicial</string>
    <string name="message_lastPage">Você está na última página</string>
    <string name="message_tapToClose">Pressione novamente para fechar o app</string>
    <string name="message_unsupported">Ação não suportada</string>
    <string name="message_duringQuiz">Você já tem alguma coisa aberta. Você deve terminá-la antes.</string>
    <string name="message_androidVersionBelowLollipop">Desculpe, a sua versão do android não suporta este recurso</string>
    <string name="message_databaseUnavailable">Desculpe, o banco de dados indisponível. Reinstale o aplicativo e tente novamente.</string>

</resources>
