<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_numbers"
            android:icon="@drawable/ic_baseline_list_numbered_24px"
            android:title="@string/numbers" />
        <item
            android:id="@+id/nav_operations"
            android:icon="@drawable/ic_baseline_add_24px"
            android:title="@string/numericOperations" />
        <item
            android:id="@+id/nav_geometry"
            android:icon="@drawable/ic_baseline_change_history_24px"
            android:title="@string/geometry" />
        <item
            android:id="@+id/nav_scales"
            android:icon="@drawable/ic_baseline_linear_scale_24px"
            android:title="@string/scalesAndMeasures" />
        <item
            android:id="@+id/nav_graphs"
            android:icon="@drawable/ic_baseline_equalizer_24px"
            android:title="@string/infoTreatment" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/about" />
    </group>

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_nightMode"
                android:icon="@drawable/ic_checkbox_disabled"
                android:title="@string/nightMode" />
            <item
                android:id="@+id/nav_liteMode"
                android:icon="@drawable/ic_checkbox_disabled"
                android:title="@string/liteMode" />
        </menu>
    </item>
    <item
        android:id="@+id/navbar_spacer"
        android:checkable="false"
        android:enabled="false"
        android:title=" "
        android:visible="false" />
</menu>